--- a/Predicting target.ipynb
+++ b/Predicting target.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing useful libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -20,19 +27,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data preparation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -693,7 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The distribution plot above show skewness to the right meaning there are outliers and the box plot also reveals existence of ouliers to the right hence one considers replacement of small missing values with median for numerical features as mean is highly affected by outliers and mode value or most frequent value for catagorical features as follows."
+    "The distribution plot above show skewness to the right meaning there are outliers and the box plot also reveals existence of ouliers to the right hence one considers replacement of small missing values with median for numerical features as mean is highly affected by outliers and mode value or most frequent value for catagorical features as follows."
    ]
   },
   {
@@ -799,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transforming the catagorical features to dummy-variable format.\n"
+    "## Transforming the catagorical features to dummy-variable format.\n"
    ]
   },
   {
@@ -1100,7 +1107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using feature engineering for better prediction of the target"
+    "## Using feature engineering for better prediction of the target"
    ]
   },
   {
@@ -1420,7 +1427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Applying the scaling operation"
+    " Applying the scaling operation"
    ]
   },
   {
@@ -1448,7 +1455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For dummy features"
+    " For dummy features"
    ]
   },
   {
@@ -1528,7 +1535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For numerical features"
+    " For numerical features"
    ]
   },
   {
@@ -1584,8 +1591,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Recursive Feature Elimination\n",
-    "\n",
+    "### Using Recursive Feature Elimination"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Select features by recursively considering smaller and smaller sets of features."
    ]
   },
@@ -1727,7 +1739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Apply log transformation onthe target to handel for outliers"
+    "### Apply log transformation onthe target to handel for outliers"
    ]
   },
   {
