--- a/Predicting target.ipynb
+++ b/Predicting target.ipynb
@@ -1811,7 +1811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Getting the train and test sets using selected 16 features "
+    " Getting the train and test sets using selected 16 features "
    ]
   },
   {
@@ -1835,7 +1835,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Null model: predicts the average of the target"
+    "### The Null model: predicts the average of the target"
    ]
   },
   {
@@ -1858,7 +1858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Linear Regression"
+    "### Multiple Linear Regression"
    ]
   },
   {
@@ -1886,7 +1886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## K-Nearest Neighbor Model"
+    "### K-Nearest Neighbor Model"
    ]
   },
   {
@@ -1914,7 +1914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lasso"
+    "### Lasso"
    ]
   },
   {
@@ -2192,14 +2192,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Making predictions with all eatures "
+    "# Making predictions with all features "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Getting the train and test sets using all features "
+    "Getting the train and test sets using all features "
    ]
   },
   {
@@ -2223,7 +2223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Null model: predicts the average of the target"
+    "### The Null model: predicts the average of the target"
    ]
   },
   {
@@ -2246,7 +2246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Linear Regression"
+    "### Multiple Linear Regression"
    ]
   },
   {
@@ -2274,7 +2274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## K-Nearest Neighbor Model"
+    "### K-Nearest Neighbor Model"
    ]
   },
   {
@@ -2302,7 +2302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lasso"
+    "### Lasso"
    ]
   },
   {
@@ -2580,7 +2580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reflection "
+    "# Conclusion "
    ]
   },
   {
